mass rename enrollment => enrolment
